<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hint">提示</string>
    <string name="dialog_yes">是</string>
    <string name="dialog_no">否</string>
    <string name="action_back">返回</string>
    <string name="action_cancel">取消</string>
    <string name="action_ok">确定</string>
    <string name="imageview_content_description"></string>
    <string name="record_camera_author">%1$s 作品</string>
    <string name="record_camera_title">拍摄</string>
    <string name="record_camera_back">返回</string>
    <string name="record_camera_next">下一步</string>
    <string name="record_camera_back_delete">回删</string>
    <string name="record_camera_delay">延迟</string>
    <string name="record_camera_filter">滤镜</string>
    <string name="record_camera_init_faild">初始化视频存储路径失败</string>
    <string name="record_camera_progress_message">正在转码…</string>
    <string name="record_camera_check_available_faild">手机满了！至少需要200M存储空间才能继续拍摄！</string>
    <string name="record_camera_open_audio_faild">无法打开录音设备！</string>
    <string name="record_camera_save_faild">视频信息保存失败！</string>
    <string name="record_camera_exit_dialog_message">是否放弃这段视频？</string>
    <string name="record_camera_import">导入</string>
    <string name="record_camera_import_image">照片</string>
    <string name="record_camera_import_image_choose">从本地照片选择</string>
    <string name="record_camera_import_image_faild">导入照片失败</string>
    <string name="record_camera_import_video">视频</string>
    <string name="record_camera_import_video_title">截\t取</string>
    <string name="record_camera_import_video_choose">从本地视频选择</string>
    <string name="record_camera_import_video_faild">导入视频失败</string>
    <string name="record_camera_tools_focus">焦点</string>
    <string name="record_camera_tools_led">闪光</string>
    <string name="record_camera_ghost">幽灵</string>
    <string name="record_camera_preview_title">编辑</string>
    <string name="record_camera_preview_pre">拍摄</string>
    <string name="record_camera_preview_next">下一步</string>
    <string name="record_camera_cancel_dialog_yes">确定</string>
    <string name="record_camera_cancel_dialog_no">取消</string>
    <string name="record_video_transcoding_faild">视频转码失败</string>
    <string name="record_video_transcoding_success">视频保存在:%s</string>
    <string name="record_read_object_faild">拍摄信息读取失败！请检查SD卡，稍后重试！</string>
    <string name="record_preview_theme">主题</string>
    <string name="record_preview_title">预览</string>
    <string name="record_preview_theme_original">原始</string>
    <string name="record_preview_theme_load_faild">主题加载失败</string>
    <string name="record_preview_encoding">正在转码…</string>
    <string name="record_preview_encoding_format">转码中\t%d%%</string>
    <string name="record_preview_music_nothing">无</string>
    <string name="record_preview_tab_theme">主题</string>
    <string name="record_preview_tab_filter">滤镜</string>
    <string name="record_preview_building">视频生成中…</string>
    <string name="app_name">CivilLife</string>
    <string name="app_name_zh">土木湿生活</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_wlcon">WlconActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_retrievepassword">RetrievePassWordActivity</string>
    <string name="title_activity_myinfo">MyinfoActivity</string>
    <string name="title_activity_content_data">ContentDataActivity</string>
    <string name="title_activity_audit">AuditActivity</string>
    <string name="title_activity_my_friend">MyFriendActivity</string>
    <string name="title_activity_publish">PublishActivity</string>
    <string name="title_activity_manage">ManageActivity</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_info_homepage">InfoHomepageActivity</string>
    <string name="title_activity_article_list">ArticleListActivity</string>
    <string name="title_activity_book_store">BookStoreActivity</string>
    <string name="tabtext_title">首页</string>
    <string name="tabtext_discover">发现</string>
    <string name="tabtext_message">消息</string>
    <string name="tabtext_my">我</string>
    <string name="message_title">小纸条</string>
    <string name="abstext_my">个人中心</string>
    <string name="discover_overman">拜师傅</string>
    <string name="discover_overman_introduce">师者，所以传道授业解惑也</string>
    <string name="discover_overman_community">师徒社区</string>
    <string name="discover_overman_community_introduce">师徒社区</string>
    <string name="discover_nearby">附近</string>
    <string name="discover_nearby_introduce">HI，来看看你周围的筑友吧</string>
    <string name="discover_fellow_townsman">寻同城老乡</string>
    <string name="discover_fellow_townsman_introduce">独在异乡为异客，筑友老乡一线牵</string>
    <string name="discover_fellow_community">老乡社区</string>
    <string name="discover_fellow_community_introduce">老乡社区</string>
    <string name="discover_city_peer">找同城同行</string>
    <string name="discover_city_peer_introduce">同行同业系天缘，筑友同城一家亲</string>
    <string name="discover_city_community">同城社区</string>
    <string name="discover_city_community_introduce">同城社区</string>
    <string name="discover_writewall">建筑书城</string>
    <string name="discover_writewall_introduce">学而时习之，日精月益</string>
    <string name="discover_my_nologin_missage">登录/注册</string>
    <string name="discover_my_nologin_introduce">还没账号？没关系，现在你可以使用QQ或微信及新浪微博账号直接登录</string>
    <string name="discover_my_manage">管理我的文字</string>
    <string name="discover_my_crowd">我的筑友/群</string>
    <string name="discover_my_apprentice">我的徒弟</string>
    <string name="discover_my_overman">我的师傅</string>
    <string name="discover_my_addfriend">添加筑友</string>
    <string name="discover_my_addoverman">添加师傅</string>
    <string name="discover_my_feedback">意见反馈</string>
    <string name="discover_my_help">使用帮助</string>
    <string name="discover_my_setting">设置</string>
    <string name="discover_my_outlogin">退出登录</string>
    <string name="discover_login_cancel">取消</string>
    <string name="discover_login_thirdpartymessage">使用合作账号一键登录/注册</string>
    <string name="discover_login_message">使用账号登录</string>
    <string name="discover_login_weixin"> 使用微信账号</string>
    <string name="discover_login_qq"> 使用 Q Q 账号</string>
    <string name="discover_login_weibo"> 使用微博账号</string>
    <string name="discover_login_btn">登  录</string>
    <string name="discover_login_register">我要注册</string>
    <string name="discover_login_forgetpw">忘记密码?</string>
    <string name="register_title">用户注册</string>
    <string name="register_submit_to">提  交</string>
    <string name="retrievepassword_title">找回密码</string>
    <string name="home_class_news">最新</string>
    <string name="home_class_essence">精华</string>
    <string name="home_item_hot">热门</string>
    <string name="home_item_download">下载</string>
    <string name="title_audit">审核新内容</string>
    <string name="start_audit">开始审核</string>
    <string name="skip_audit">跳过</string>
    <string name="funny_audit">好文</string>
    <string name="boring_audit">没劲</string>
    <string name="report_audit">举报</string>
    <string name="comment">评论</string>
    <string name="send">发送</string>
    <string name="my_friend">我的筑友</string>
    <string name="my_master">我的师傅</string>
    <string name="my_apprentice">我的徒弟</string>
    <string name="tx_publish">发布</string>
    <string name="tx_publish_hint">鼓励原创、遵守法律、转载请务必注明出处，否则审核不过!</string>
    <string name="tx_publishmissage">发布:</string>
    <string name="tx_publishlocation">添加地理位置</string>
    <string name="tx_save">保存草稿</string>
    <string name="tx_anonymity">匿名</string>
    <string name="title_myinfo">个人资料</string>
    <string name="title_myinfo_modification">修改</string>
    <string name="stting_dump_cache">清除缓存</string>
    <string name="stting_gain">省流量模式</string>
    <string name="stting_notice">消息推送</string>
    <string name="stting_review">赏个好评</string>
    <string name="stting_updata">检查更新</string>
    <string name="stting_about">关于土木湿生活</string>
    <string name="info_input_content">必填，详细反馈</string>
    <string name="feedback_contact_tip">您的联系方式有助于我们沟通和解决问题，仅工作人员可见</string>
    <string name="info_input_contact">QQ，邮件或者电话</string>

    <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">放弃全部选择</string>
    <string name="no_photo">相册没有图片</string>
    <string name="network_show_title">没有可用网络</string>
    <string name="network_show_msg">是否对网络进行设置？</string>
    <string name="network_show_setting">设置</string>
    <string name="network_show_exit">离开</string>
    <string name="network_show_error">网络异常！</string>
    <string name="network_show_connectionless">无网络连接！</string>
    <string name="title_activity_share">ShareActivity</string>

</resources>