<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_back_color"
    tools:context=".FeedBackActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_bar"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/activity_bar_color" >

        <TextView
            android:id="@+id/tx_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/discover_my_feedback"
            android:textColor="@color/activity_bar_title_color"
            android:textSize="@dimen/activity_typeface_size" />

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:src="@drawable/ic_back_sele" />
        
        
         <TextView
            android:id="@+id/tx_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12.0dip"
            android:text="提交"
            android:textColor="@color/tx_publish_sele"
            android:textSize="16.0sp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relativeLayout1"
        android:background="@color/color_white" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/content_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8.0dip"
                android:layout_marginLeft="8.0dip"
                android:layout_marginRight="8.0dip"
                android:layout_marginTop="8.0dip"
                android:background="@drawable/comment_write_input_bg"
                android:orientation="horizontal"
                android:paddingBottom="10.0dip"
                android:paddingLeft="10.0dip"
                android:paddingRight="7.0dip"
                android:paddingTop="7.0dip" >

                <EditText
                    android:id="@+id/content"
                    style="@style/feedback_input_text"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8.0dip"
                    android:layout_weight="1.0"
                    android:gravity="top|left|center"
                    android:hint="@string/info_input_content" />
            </LinearLayout>

            <EditText
                android:id="@+id/contact"
                style="@style/feedback_input_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content_layout"
                android:layout_marginBottom="8.0dip"
                android:layout_marginLeft="8.0dip"
                android:layout_marginRight="8.0dip"
                android:background="@drawable/comment_write_input_bg"
                android:hint="@string/info_input_contact"
                android:paddingBottom="10.0dip"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:paddingTop="7.0dip"
                android:singleLine="true" />

            <TextView
                android:id="@+id/contact_tip"
                style="@style/feedback_contact_tip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/contact"
                android:layout_marginLeft="8.0dip"
                android:layout_marginRight="8.0dip"
                android:text="@string/feedback_contact_tip" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>